--- a/Practice/26-06-2025.md
+++ b/Practice/26-06-2025.md
@@ -1,1 +1,36 @@
+1. What is debounce function:-
+Solution:- A debounce function is used to ensure that a particular function does not get called too frequently. 
+           It is commonly used in scenarios where an action might be triggered multiple times in rapid succession, such as handling user input events like button clicks, key presses, or scrolling.
+           The debounce function will limit the rate at which the function can be executed, ensuring it only runs after a specified amount of time has passed since the last invocation.
+           Used in search function at facebook/youtube 
+           'i'---->'iP'----->'iPh'----->'ipho' (this type of frequcnt call result only the last one 
+1.1 . BOT Controller (NOT SURE .. This helps in handling the api call as it takes the newest one response from the api calls)
 
+
+2. Create a count function like---------------"Closuer"
+   count() // 1
+   count() //2
+   count.reset()
+   count() // 1
+   -------------Use iffi function --------
+   const count = (() => {
+    let id = 0;
+    function counter() {
+        id++;
+        return id;
+    }
+    counter.reset = function() {
+        id = 0;
+    };
+    return counter;
+})();
+
+// Testing the count function
+console.log(count()); // Output: 1
+console.log(count()); // Output: 2
+console.log(count()); // Output: 3
+
+count.reset(); // Resetting the counter
+
+console.log(count()); // Output: 1
+console.log(count()); // Output: 2
